--- a/three-step-wallet/package.json
+++ b/three-step-wallet/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~8.1.2",
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
+    "@ionic-native/camera": "^5.16.0",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/qr-scanner": "^5.16.0",
     "@ionic-native/splash-screen": "^5.0.0",
@@ -26,6 +27,7 @@
     "@ionic/angular": "^4.7.1",
     "cordova-ios": "^5.0.1",
     "cordova-plugin-add-swift-support": "^2.0.2",
+    "cordova-plugin-camera": "^4.1.0",
     "cordova-plugin-qrscanner": "^3.0.1",
     "core-js": "^2.5.4",
     "nem2-sdk": "^0.14.4",
@@ -74,7 +76,8 @@
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-camera": {}
     },
     "platforms": [
       "ios"
