とりあえずカメラを実機で確認しました

--- a/three-step-wallet/ionic.config.json
+++ b/three-step-wallet/ionic.config.json
@@ -1,7 +1,8 @@
 {
   "name": "three-step-wallet",
   "integrations": {
-    "cordova": {}
+    "cordova": {},
+    "capacitor": {}
   },
   "type": "angular"
 }
