--- a/three-step-wallet/package.json
+++ b/three-step-wallet/package.json
@@ -19,6 +19,8 @@
     "@angular/platform-browser": "~8.1.2",
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
+    "@capacitor/core": "1.3.0",
+    "@capacitor/ios": "^1.3.0",
     "@ionic-native/camera": "^5.16.0",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/qr-scanner": "^5.16.0",
@@ -44,6 +46,7 @@
     "@angular/compiler": "~8.1.2",
     "@angular/compiler-cli": "~8.1.2",
     "@angular/language-service": "~8.1.2",
+    "@capacitor/cli": "1.3.0",
     "@ionic/angular-toolkit": "~2.0.0",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
