--- a/three-step-wallet/package.json
+++ b/three-step-wallet/package.json
@@ -48,6 +48,7 @@
     "@angular/language-service": "~8.1.2",
     "@capacitor/cli": "1.3.0",
     "@ionic/angular-toolkit": "~2.0.0",
+    "@ionic/lab": "2.0.16",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
