--- a/three-step-wallet/package.json
+++ b/three-step-wallet/package.json
@@ -4,6 +4,7 @@
   "author": "Ionic Framework",
   "homepage": "https://ionicframework.com/",
   "scripts": {
+    "postinstall": "patch-package",
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
@@ -33,6 +34,8 @@
     "cordova-plugin-qrscanner": "^3.0.1",
     "core-js": "^2.5.4",
     "nem2-sdk": "^0.14.4",
+    "patch-package": "^6.2.0",
+    "postinstall-postinstall": "^2.0.0",
     "rxjs": "^6.5.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
