ページ遷移nem2-sdk

--- a/3-step-wallet-mail/ionic.config.json
+++ b/3-step-wallet-mail/ionic.config.json
@@ -1,5 +1,8 @@
 {
   "name": "3-step-wallet-mail",
-  "integrations": {},
+  "integrations": {
+    "capacitor": {},
+    "cordova": {}
+  },
   "type": "angular"
 }
