--- a/3-step-wallet-mail/package.json
+++ b/3-step-wallet-mail/package.json
@@ -27,9 +27,10 @@
     "@ionic-native/qr-scanner": "^5.18.0",
     "@ionic-native/sms": "^5.18.0",
     "@ionic-native/splash-screen": "^5.0.0",
-    "@ionic-native/status-bar": "^5.0.0",
+    "@ionic-native/status-bar": "^5.18.0",
     "@ionic/angular": "^4.7.1",
     "cordova-plugin-qrscanner": "^3.0.1",
+    "cordova-plugin-statusbar": "^2.4.2",
     "core-js": "^2.5.4",
     "nem2-sdk": "^0.15.1",
     "rxjs": "^6.5.3",
@@ -68,7 +69,8 @@
   "cordova": {
     "plugins": {
       "cordova-plugin-qrscanner": {},
-      "cordova-sms-plugin": {}
+      "cordova-sms-plugin": {},
+      "cordova-plugin-statusbar": {}
     }
   }
 }
