--- a/3-step-wallet-mail/package.json
+++ b/3-step-wallet-mail/package.json
@@ -29,12 +29,14 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.19.1",
     "@ionic/angular": "^4.7.1",
+    "bufferutil": "^4.0.1",
     "cordova-plugin-qrscanner": "^3.0.1",
     "cordova-plugin-statusbar": "^2.4.2",
     "core-js": "^2.5.4",
-    "nem2-sdk": "^0.16.3",
+    "nem2-sdk": "^0.16.2",
     "rxjs": "^6.5.3",
     "tslib": "^1.9.0",
+    "utf-8-validate": "^5.0.2",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
