--- a/three-step-wallet/package.json
+++ b/three-step-wallet/package.json
@@ -28,6 +28,7 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
+    "bufferutil": "^4.0.1",
     "cordova-ios": "^5.0.1",
     "cordova-plugin-add-swift-support": "^2.0.2",
     "cordova-plugin-camera": "^4.1.0",
@@ -38,6 +39,7 @@
     "postinstall-postinstall": "^2.0.0",
     "rxjs": "^6.5.3",
     "tslib": "^1.9.0",
+    "utf-8-validate": "^5.0.2",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
