--- a/transaciton-list/package.json
+++ b/transaciton-list/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@ionic/vue": "0.0.4",
     "nem2-sdk": "^0.16.1",
     "register-service-worker": "^1.6.2",
     "rxjs": "^6.5.4",
