--- a/three-step-wallet/package.json
+++ b/three-step-wallet/package.json
@@ -20,7 +20,8 @@
     "@angular/platform-browser": "~8.1.2",
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
-    "@capacitor/core": "1.3.0",
+    "@capacitor/android": "^2.0.1",
+    "@capacitor/core": "^1.3.0",
     "@capacitor/ios": "^1.3.0",
     "@ionic-native/camera": "^5.16.0",
     "@ionic-native/core": "^5.0.0",
@@ -51,7 +52,7 @@
     "@angular/compiler": "~8.1.2",
     "@angular/compiler-cli": "~8.1.2",
     "@angular/language-service": "~8.1.2",
-    "@capacitor/cli": "1.3.0",
+    "@capacitor/cli": "^1.3.0",
     "@ionic/angular-toolkit": "~2.0.0",
     "@ionic/lab": "2.0.16",
     "@types/jasmine": "~3.3.8",
