--- a/three-step-wallet/package.json
+++ b/three-step-wallet/package.json
@@ -29,6 +29,7 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
+    "@ionic/cli": "^6.6.0",
     "bufferutil": "^4.0.1",
     "cordova-ios": "^5.0.1",
     "cordova-plugin-add-swift-support": "^2.0.2",
